--- a/Mobile Application/claim_mate/android/app/src/main/AndroidManifest.xml
+++ b/Mobile Application/claim_mate/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.care_u">
+    package="com.example.claim_mate">
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
-        android:label="care_u"
+        android:label="claim_mate"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
