--- a/Mobile Application/claim_mate/pubspec.yaml
+++ b/Mobile Application/claim_mate/pubspec.yaml
@@ -30,12 +30,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   shared_preferences: ^2.0.12
-  flutter_secure_storage: ^8.0.0
+  flutter_secure_storage: ^9.2.4
   mysql1: ^0.20.0
-  http: ^0.13.3
+  http: ^1.2.2
   sqflite: ^2.0.0+4
-  image_picker: ^0.8.4+4
-  geolocator: ^7.6.2
+  image_picker: ^1.1.2
+  geolocator: ^12.0.0
   flutter:
     sdk: flutter
 
@@ -53,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
