--- a/cm/pubspec.yaml
+++ b/cm/pubspec.yaml
@@ -27,17 +27,17 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
-# dependencies:
-#   flutter:
-#     sdk: flutter
-
-  dependencies:
+dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^2.2.0
-  http: ^0.13.6
-  flutter_secure_storage: ^9.0.0
-  geolocator: ^11.0.0
+
+  # dependencies:
+  # flutter:
+  #   sdk: flutter
+  # shared_preferences: ^2.2.0
+  # http: ^0.13.6
+  # flutter_secure_storage: ^9.0.0
+  # geolocator: ^11.0.0
   
 
 
