--- a/cm/pubspec.yaml
+++ b/cm/pubspec.yaml
@@ -27,9 +27,20 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.6
+  shared_preferences: ^2.2.0
+  flutter_secure_storage: ^9.0.0
+  geolocator: ^11.0.0
+  image_picker: ^1.0.4
+
+
+# dependencies:
+#   flutter:
+#     sdk: flutter
 
   # dependencies:
   # flutter:
